[package]
name = "game_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.12", features = ["json"] }
tokio = { version = "0.3.3", features = ["full"] }
rayon = "1.5.3"
tokio-compat-02 = "0.2"
serde = { version = "1.0.145", features = ["derive"] }
futures = "0.3.24"

piston = "0.53.0"
piston2d-opengl_graphics = "0.81.0"
piston2d-graphics = "0.42.0"
piston2d-touch_visualizer = "0.32.0"

[dependencies.pistoncore-sdl2_window]
version = "0.68.0"
optional = true

[dependencies.pistoncore-glfw_window]
version = "0.76.0"
optional = true

[dependencies.pistoncore-glutin_window]
version = "0.70.1"
optional = true

[features]
default = ["include_glfw"]
include_sdl2 = ["pistoncore-sdl2_window"]
include_glfw = ["pistoncore-glfw_window"]
include_glutin = ["pistoncore-glutin_window"]